# antigravity-mobile

./: .gitignore  README.md  pyproject.toml  summary.md
.agents/: AGENTS.md
.agents/skills/remote_control/: SKILL.md
antigravity_remote/: __init__.py  agent_approve.py  agent_daemon.py  cli.py  server.py  task_runner.py
antigravity_remote/templates/: index.html
tests/: test_server.py
