[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-remote"
version = "0.1.0"
description = "A remote monitor and scheduler CLI tool for Antigravity 2.0 IDE"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "jinja2>=3.1.0",
    "websockets>=11.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]

[project.scripts]
antigravity-remote = "antigravity_remote.cli:main"

[tool.setuptools.packages.find]
include = ["antigravity_remote*"]

[tool.setuptools.package-data]
antigravity_remote = [
    "templates/*.html",
    "static/**/*.css",
    "static/**/*.js"
]
